--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -782,6 +782,9 @@ header {
 }
 
 .card-top img {
+    object-fit: cover;
+    height: 200px;
+    object-position: center;
     transition: .3s ease-in;
 }
 
@@ -879,7 +882,11 @@ header {
     background: #fff;
     transition: .3s;
 }
-
+.expert-section .card .card-top img{
+    height: 265px;
+    object-fit: cover;
+    object-position: top;
+}
 .expert-section .card:hover {
     background: #f5f5f5;
 }
