--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -10,7 +10,9 @@
 }
 
 @media only screen and (max-width: 1024px) {
-
+.menu-button{
+    display: block;
+}
     .mobile_primary {
         width: 100%;
         height: 100vh;
