--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -998,6 +998,10 @@ header {
 .frame-left-col img {
     z-index: 999;
     position: relative;
+    z-index: 999;
+    position: relative;
+    height: 363px;
+    object-fit: cover;
 }
 
 .frame-right-col h5 {
@@ -1109,6 +1113,7 @@ header {
 .testi-rightbox .doctor-name img {
     width: 20px;
     margin-right: 5px;
+    height: auto;
 }
 
 .testi-rightbox .doctor-name p {
@@ -1132,6 +1137,8 @@ header {
 
 .testi-card img {
     transition: .3s ease-in;
+    height: 145px;
+    object-fit: cover;
 }
 
 .testi-card:hover img {
@@ -1156,6 +1163,23 @@ header {
     font-size: 16px;
     color: #000;
     font-weight: 500;
+    font-size: 15px;
+    color: #000;
+    font-weight: 500;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    width: 100%;
+}
+
+.blog-section .card-content .main-btn {
+    width: 60%;
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    justify-content: end;
 }
 
 .blog-section .card-content {
@@ -1225,7 +1249,19 @@ header {
 }
 
 .hear-doc-image {
-    height: 198px;
+    height: 225px;
+    object-fit: cover;
+}
+
+.hear-doc-overlay::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background: #0000004f;
+    left: 0;
+    z-index: 99;
 }
 
 .doc-image-hover {
@@ -4708,20 +4744,6 @@ li.chat-ic::before {
 .top-drop-down form select {
     outline: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
