Website all the changes are done
Website all the changes are done

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -404,6 +404,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 .sticky-nav {
@@ -452,7 +453,7 @@ header {
 .mobile_primary {
     padding: 0;
     transition: all .6s;
-    position: relative;
+    /* position: relative; */
     z-index: 9999;
     display: flex;
     align-items: center;
@@ -510,7 +511,7 @@ header {
     position: absolute;
     top: 100%;
     left: 0px;
-    width: 90%;
+    width: 100%;
     visibility: hidden;
     opacity: 0;
     border-bottom-right-radius: 40px;
@@ -573,11 +574,13 @@ header {
     padding: 10px 10px 15px 12px;
     margin: 0 0 8px;
     border-bottom: 1px solid #ccc;
-    display: block;
+    display: flex;
+    align-items: center;
+    gap: 5px;
     text-transform: inherit;
     font-size: 15px;
     font-weight: 500;
-    line-height: 16px;
+    line-height: 20px;
     text-align: left;
     position: relative;
 }
@@ -909,7 +912,7 @@ header {
     font-size: 15px;
     color: #767779;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
     font-weight: 400;
@@ -1226,10 +1229,16 @@ header {
 
 .hear-doctor-content {
     padding: 20px;
-    background: #cbc7c9db;
+    background: #ecececdb;
     position: absolute;
     bottom: 0px;
     width: 100%;
+    z-index: 999;
+    border-radius: 0px 0px 8px 8px;
+}
+
+.hear-doc-left-btn .main-btn {
+    width: 25%;
 }
 
 .hear-doctor-content p {
@@ -1249,8 +1258,9 @@ header {
 }
 
 .hear-doc-image {
-    height: 225px;
+    height: 235px;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .hear-doc-overlay::before {
@@ -1262,10 +1272,14 @@ header {
     background: #0000004f;
     left: 0;
     z-index: 99;
+    border-radius: 10px;
 }
 
 .doc-image-hover {
     transition: .3s ease-in;
+    border-radius: 10px;
+    height: 495px;
+    object-fit: cover;
 }
 
 .doc-image-hover:hover {
@@ -1279,6 +1293,7 @@ header {
     top: 40px;
     height: 100%;
     width: 70%;
+    z-index: 999;
 }
 
 .blog-right-col .hear-doctor-content p {
@@ -2629,7 +2644,7 @@ footer.footer {
 
 .inner-pages-header.procedures-details-page-header .details-heading h3 {
     font-size: 25px;
-    text-transform: capitalize;
+    text-transform: none;
     font-weight: 600;
 }
 
@@ -3126,9 +3141,14 @@ i.custom-download {
     color: #b71c2b;
     font-weight: 600;
     margin-bottom: 10px;
-    text-transform: uppercase;
+    text-transform: capitalize;
     display: inline-block;
     position: relative;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 
 }
 
@@ -3175,7 +3195,7 @@ i.custom-download {
 }
 
 .blog-details-main-page .inner-pages-header.procedures-details-page-header .details-heading h3 {
-    font-size: 18px;
+    font-size: 17px;
     text-transform: capitalize;
     font-weight: 600;
     margin-bottom: 5px;
@@ -3514,10 +3534,11 @@ li.hospital-doctor::before {
     color: #fff;
 }
 
-.blog-left-col p {
+.blog-left-col a {
     font-size: 15px;
     color: #000000;
     margin-bottom: 5px;
+    display: block;
 }
 
 .blog-page-right-col .card-content p span {
@@ -3589,19 +3610,25 @@ li.hospital-doctor::before {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: fit-content;
 }
 
 .blog-tagging span {
     color: #616161;
     background: #f3f3f3;
-    padding: 10px 20px;
+    padding: 10px 0px;
     border-radius: 30px;
     font-size: 16px;
+    display: inline-block;
+    width: 171px;
+    text-align: center;
 }
 
 .find-doctor-left-col {
     background: #f3f3f3;
     padding: 20px;
+    position: sticky;
+    top: -700px;
 }
 
 .find-doctor-left-col h4 {
@@ -4107,7 +4134,6 @@ li.details-hospital-ic::before {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 400px;
-
 }
 
 .hospital-details-page-section .details-banner .details-heading .hospital-content ul li {
@@ -4682,7 +4708,7 @@ li.chat-ic::before {
 
 .doctor-details-main-page .left-col-img {
     position: sticky;
-    top: -215px;
+    top: 140px;
 }
 
 .doctor-details-main-page .right-col-details .main-heading .d-flex.align-items-center.gap-2.mb-2 {
@@ -5116,3 +5142,105 @@ li.chat-ic::before {
     padding: 25px 0px 25px 55px;
     flex-grow: 1;
 }
+
+.play-icon img {
+    width: 40px !important;
+    height: auto !important;
+}
+
+.play-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.hear-from-doc-section .play-icon {
+    height: auto;
+    z-index: 999;
+}
+
+.mobile-location-dropdown select {
+    border: none;
+}
+
+.mobile-location-dropdown {
+    margin: 0px 0px 0px 22px;
+}
+
+.quicklink-header {
+    display: none !important;
+}
+
+.details-banner form .iti__country-container button {
+    padding: 10px 0px;
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+    background: #b71c2b !important;
+}
+
+.blog-details-banner-image {
+    margin-top: 105px;
+}
+
+.about-us-main-page .expert-section .card {
+    min-height: 405px;
+}
+
+.sticky-from {
+    position: sticky;
+    top: 140px;
+}
+
+.expert-section .card.active{
+    background: #f5f5f5;
+}
+.blog-list-doc-name p {
+    font-size: 15px;
+    margin-bottom: 0;
+    color: #000;
+}
+
+.visa-select select {
+    border: none;
+}
+
+.scroll-container {
+    overflow: auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    width: 51rem;
+}
+.blog-listing-scroll-tab{
+    background: #f3f3f3;
+    border-radius: 30px;
+}
+
+
+.scroll-container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.scroll-container::-webkit-scrollbar
+{
+	width: 2px;
+	background-color: #b71c2b;
+    height: 5px;
+    border-radius: 10px;
+}
+
+.scroll-container::-webkit-scrollbar-thumb
+{
+	background-color: #b71c2b;
+	border: 2px solid #b71c2b;
+    border-radius: 10px;
+}
+.book-appointment-main-page .contact-right-col .association-form-card .form-select{
+    background-position: 44rem;
+}
+
