--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3703,7 +3703,7 @@ li.hospital-doctor::before {
     background: #f3f3f3;
     padding: 20px;
     position: sticky;
-    top: -700px;
+    top: -57.5px;
 }
 
 .find-doctor-left-col h4 {
@@ -5401,7 +5401,12 @@ li.chat-ic::before {
 }
 
 .blog-details-banner-image {
-    margin-top: 105px;
+    margin-top: 95px;
+}
+.blog-details-banner-image .details-heading img{
+    width: 100%;
+    height: 207px;
+    object-fit: cover;
 }
 
 .about-us-main-page .expert-section .card {
@@ -5607,10 +5612,12 @@ a.active {
     top: 46px;
     right: 267px;
     max-width: 350px;
-    border-radius: 3px;
-    height: 55px;
+    border-radius: 55px;
+    height: 45px;
     display: none;
+    transition: .5s;
 }
+
 
 .generic-search {
     border: 1px solid #b71c2b;
@@ -5710,3 +5717,7 @@ a.active {
 /* .read-more-toggle:checked~.read-more-label::after {
     content: "Read Less";
 } */
+.details-key-row.rounded-field-form .input-group input,
+.details-key-row.rounded-field-form .input-group select {
+    border: 1px solid #bbbbbb;
+}
