--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1899,8 +1899,14 @@
         height: 288px;
         object-fit: cover;
     }
-    .custom-tab-scroll-wrapper{
+
+    .custom-tab-scroll-wrapper {
         max-width: 25rem;
+    }
+
+    .search-box {
+        right: 0;
+        max-width: 100%;
     }
 
 }
